--- a/style.css
+++ b/style.css
@@ -4,23 +4,14 @@
     /* Uso: Áreas grandes y prominentes de tu diseño, como el fondo del cuerpo principal de la página o secciones destacadas. */
     --secondary-color: #93d79e;
     /* Uso: Elementos que necesiten destacar pero no sean el foco principal. Utilízalo para fondos de secciones menores, tarjetas de información, encabezados secundarios, iconos y gráficos. */
-    /* --accent-color: #D0FF00; */
     --accent-color: #20f0c3;
+    /* --accent-color: #D0FF00; */
     /* Uso: Llamar la atención sobre elementos importantes de acción o información crítica, como botones, enlaces, alertas y elementos interactivos. El uso debe ser moderado. */
     /* --background-color: #03522a; */
     --background-color: #350032;
     --text-color: #e1f9dc;
     --text2-color: #202020;
     --degradiente-color: linear-gradient(to right, var(--primary-color), var(--accent-color));
-
-    /*
-    background-color: #0a3c01;
-    --primary-color: #fff199;
-    --secondary-color: #93d79e;
-    --accent-color: #D0FF00;
-    --background-color: #67EACA;
-    --text-color: #363636;
-    */
 }
 *{
     margin: 0;
@@ -45,8 +36,9 @@ body{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-left: 40px;
-        margin-right: 60px;
+        width: 100%;
+        /* margin-left: 40px;
+        margin-right: 60px; */
         padding: .8rem 2rem;
 
         .nav-logo{
@@ -156,8 +148,7 @@ body{
         }
         & .icon{
             font-size: 2rem; 
-            width: 2rem;     
-            height: 2rem;
+            width: 2rem;    
             display: flex;
             justify-content: center;
             align-items: center;
@@ -185,7 +176,6 @@ body{
             }
             .slash{
                 width: 2rem;
-                height: auto;
                 color: var(--primary-color);
             }
         }
@@ -293,7 +283,6 @@ body{
                                 & .icono{
                                     font-size: 2rem;
                                     width: 2rem;
-                                    height: auto;
                                 }
 
                                 & p{
@@ -385,7 +374,7 @@ body{
                 }
 
                 &:hover{
-                    transform: scale(0.5);
+                    transform: scale(1.05);
                 }
             }
         }
