--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 
 /* HEADER */
 .header{
-    height: 13vh;
+    width: 100%;
     position: sticky;
     top: 0;
     z-index: 10;   
@@ -37,8 +37,6 @@ body{
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        /* margin-left: 40px;
-        margin-right: 60px; */
         padding: .8rem 2rem;
 
         .nav-logo{
@@ -128,6 +126,8 @@ body{
             }
         }
     }
+
+/* Estilo general para los iconos sociales */
     & .social{
         display: flex;
         justify-content: center;
@@ -224,7 +224,7 @@ body{
                     .name-tab::after{
                         content: '';
                         position: absolute;
-                        height: 2px;
+                        height: 3px;
                         width: 0;
                         bottom: 0;
                         left: 0;
@@ -236,8 +236,9 @@ body{
                         animation: grow-tab 0.6s forwards;
                     }
                     .name-tab:active::after{
-                        animation: forwards;
+                        /* animation: forwards; */
                         width: 30%;
+                        transition: width 0.3s ease-in-out;
                     }
                 }
 
@@ -311,13 +312,6 @@ body{
                 }
             }
         }
-    }
-
-/* ANIMACION DEL TAB */
-    @keyframes grow-tab {
-    0% {translate: 20% 0;}
-    50% { width: 90%;}
-    100% {width: 30%;}
     }
 
 /* CONTENIDO PRINCIPAL - PROYECTOS */
@@ -466,6 +460,13 @@ body{
     }
 }
 
+/* ANIMACION PARA EL TAB */
+@keyframes grow-tab {
+    0% {translate: 20% 0;}
+    50% { width: 90%;}
+    100% {width: 30%;}
+}
+
 footer{
     width: 100%;
     text-align: center;
@@ -493,48 +494,27 @@ footer{
     }
 }
 
+.navbar-toggler-icon {
+    background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 30 30"%3E%3Cpath stroke="%23000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15h20M5 9h20M5 21h20" /%3E%3C/svg%3E');
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ESTILOS PARA HEADER MOBILE Y TABLET */
-@media (max-width: 768px){
-    .header{
-        height: initial;
-        
-        .navbar{
-            flex-direction: column;
-            margin-left: 10px;
-            margin-right: 10px;
-            row-gap: 20px;
-
-            .nav-logo{
-                font-weight: 700;
-                font-size: 1.2rem;
-            }
-
-            .nav-list{
-                padding: initial;
-
-                .nav-item{
-                    .nav-link{
-                        font-weight: 300;
-                        margin-right: initial;
-                        font-size: 1rem;
-                        padding: 0.2rem;
-                    }
-                }
-            }
-        }
+/* ESTILOS PARA EXTRA SMALL DEVICES (mobile hasta 600px) */
+@media only screen and (max-width: 600px){
+    /* .nav-list {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        background: rgba(255, 255, 255, 0.9);
+        width: 100%;
     }
+
+    .nav-list.active {
+        display: flex;
+    }
+
+    .menu-toggle {
+        display: block;
+    } */
 }
